# YiCAD

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  README_zh.md  conanfile.py  files_to_utf8.py
YiCAD/: CMakeLists.txt
YiCAD/res/ribbon/: ribbon_icon.qrc
YiCAD/res/shaders/: basic_shader.shader  common.inl  dash.shader  image.shader  line.shader  line_no_width.shader  line_strip.shader  line_strip_closed.shader  line_strip_closed_no_width.shader  line_strip_no_width.shader  ray.shader  triangle.shader  xline.shader
YiCAD/res/styles/: light.qss
YiCAD/src/actions/: ActionBlockInsertPrepare.cpp  ActionBlockInsertPrepare.h  ActionBlocksCreate.cpp  ActionBlocksCreate.h  ActionBlocksDelete.cpp  ActionBlocksDelete.h  ActionBlocksEdit.cpp  ActionBlocksEdit.h  ActionBlocksImport.cpp  ActionBlocksImport.h  ActionBlocksInsert.cpp  ActionBlocksInsert.h  ActionBlocksSave.cpp  ActionBlocksSave.h  ActionBlocksSaveAs.cpp  ActionBlocksSaveAs.h  ActionCopyToLayer.cpp  ActionCopyToLayer.h  ActionDefault.cpp  ActionDefault.h  ActionDefineAttributes.cpp  ActionDefineAttributes.h  ActionDimAligned.cpp  ActionDimAligned.h  ActionDimAngular.cpp  ActionDimAngular.h  ActionDimBaseline.cpp  ActionDimBaseline.h  ActionDimDiametric.cpp  ActionDimDiametric.h  ActionDimLeader.cpp  ActionDimLeader.h  ActionDimLinear.cpp  ActionDimLinear.h  ActionDimRadial.cpp  ActionDimRadial.h  ActionDimStyle.cpp  ActionDimStyle.h  ActionDimension.cpp  ActionDimension.h  (+172 more)
YiCAD/src/ai/: AIAssistant.cpp  AIAssistant.h  AIIntentRouter.cpp  AIIntentRouter.h  AILLMClassifier.cpp  AILLMClassifier.h  AIPipeline.cpp  AIPipeline.h  ChunkSplitter.cpp  ChunkSplitter.h  ContextResolver.cpp  ContextResolver.h  ConversationHistory.cpp  ConversationHistory.h  DeepSeekProvider.cpp  DeepSeekProvider.h  DirectEntityExecutor.cpp  DirectEntityExecutor.h  LLMCommandBridge.cpp  LLMCommandBridge.h  LLMSettingsService.cpp  LLMSettingsService.h  RAGPipeline.cpp  RAGPipeline.h  RAGTypes.h  Retriever.cpp  Retriever.h  SecretStorage.cpp  SecretStorage.h
YiCAD/src/cmd/: Commands.cpp  Commands.h
YiCAD/src/kernel/actions/: ActionInterface.cpp  ActionInterface.h  Preview.cpp  Preview.h  PreviewActionInterface.cpp  PreviewActionInterface.h  Snapper.cpp  Snapper.h
YiCAD/src/kernel/builder_model/: Datamodel.cpp  Datamodel.h  DmArc.cpp  DmArc.h  DmAtomicEntity.cpp  DmAtomicEntity.h  DmBlock.cpp  DmBlock.h  DmBlockReference.cpp  DmBlockReference.h  DmBlockTable.cpp  DmBlockTable.h  DmBlockTableListener.h  DmBoundingBox.cpp  DmBoundingBox.h  DmCachePainter.cpp  DmCachePainter.h  DmCircle.cpp  DmCircle.h  DmClipboard.cpp  DmClipboard.h  DmColor.cpp  DmColor.h  DmConstructionLine.cpp  DmConstructionLine.h  DmDocument.cpp  DmDocument.h  DmEllipse.cpp  DmEllipse.h  DmEntity.cpp  DmEntity.h  DmEntityContainer.cpp  DmEntityContainer.h  DmEntityHelper.cpp  DmEntityHelper.h  DmFlags.cpp  DmFlags.h  DmHatch.cpp  DmHatch.h  DmId.cpp  (+57 more)
YiCAD/src/kernel/data_model/: ArcData.cpp  ArcData.h  BlockReferenceData.cpp  BlockReferenceData.h  CircleData.cpp  CircleData.h  EllipseData.cpp  EllipseData.h  EntityData.cpp  EntityData.h  EntityDataDef.h  HatchData.cpp  HatchData.h  ImageData.cpp  ImageData.h  LineData.cpp  LineData.h  LineStripData.cpp  LineStripData.h  PointData.cpp  PointData.h  PolylineData.cpp  PolylineData.h  RayData.cpp  RayData.h  RegionData.cpp  RegionData.h  SolidData.cpp  SolidData.h  SplineData.cpp  SplineData.h  TriangleData.cpp  TriangleData.h  XLineData.cpp  XLineData.h
YiCAD/src/kernel/debug/: Debug.cpp  Debug.h
YiCAD/src/kernel/fileio/: Fileio.cpp  Fileio.h
YiCAD/src/kernel/filters/: FilterInterface.h  FilterJsonIO.cpp  FilterJsonIO.h  FilterOcdIO.cpp  FilterOcdIO.h
YiCAD/src/kernel/generators/: XMLWriterQXmlStreamWriter.cpp  XMLWriterQXmlStreamWriter.h  XmlWriterInterface.h
YiCAD/src/kernel/gui/: GuiCommandEvent.h  GuiCoordinateEvent.h  GuiDialogFactory.cpp  GuiDialogFactory.h  GuiGrid.cpp  (+9 more)
YiCAD/src/main/: ApplicationWindow.cpp  ApplicationWindow.h  DbPluginInterface.cpp  DbPluginInterface.h  DocPluginInterface.cpp  DocPluginInterface.h  MDIWindow.cpp  MDIWindow.h  Main.cpp  Main.h  MainWindowx.cpp  MainWindowx.h  YiCAD.rc  YiCAD.rc.cmake  YiCadPch.h
YiCAD/src/plugin_runtime/: HostApi.cpp  HostApi.h  NativePluginLoader.cpp  NativePluginLoader.h  PluginFileIOAdapter.cpp  PluginFileIOAdapter.h  PluginManager.cpp  PluginManager.h  PluginRegistry.cpp  PluginRegistry.h  PluginUiAdapter.cpp  PluginUiAdapter.h  YiCadPluginAbi.h  YiCadPluginSdk.h
YiCAD/src/plugins/: DatabaseInterface.h  DocumentInterface.h  PluginInterface.h
YiCAD/src/ui/: AIDialog.cpp  AIDialog.h  CustomComboboxItem.cpp  CustomComboboxItem.h  LLMSettingsPage.cpp  LLMSettingsPage.h  MTextEditWidget.cpp  MTextEditWidget.h  UIActionGroupManager.cpp  UIActionGroupManager.h  UIActionHandler.cpp  UIActionHandler.h  UIArrowBox.cpp  UIArrowBox.h  UIBottomWidget.cpp  UIBottomWidget.h  UIColorBox.cpp  UIColorBox.h  UICommandWidget.cpp  UICommandWidget.h  UICurrentActivePen.cpp  UICurrentActivePen.h  UIDialogFactory.cpp  UIDialogFactory.h  UIDimStyleBox.cpp  UIDimStyleBox.h  UIDimStyleListBox.cpp  UIDimStyleListBox.h  UIDimzerosBox.cpp  UIDimzerosBox.h  UIDoubleSpinBox.cpp  UIDoubleSpinBox.h  UIFileDialog.cpp  UIFileDialog.h  UIFontBox.cpp  UIFontBox.h  UIIntSpinBox.cpp  UIIntSpinBox.h  UILayerBox.cpp  UILayerBox.h  (+18 more)
YiCAD/support/: README.md
YiCAD/support/ai/: 00-overview.md  01-drawing-lines.md  02-drawing-curves.md  03-drawing-polyline.md  04-drawing-annotation.md  05-modification.md  06-dimensioning.md  07-layers.md  08-blocks.md  09-snapping.md  10-measurement.md  11-view-control.md  12-file-operations.md  13-ai-assistant.md  14-command-reference.md
YiCAD/support/config/: keyconfig.xml
YiCAD/ts/: YiCAD_zh_cn.ts  qtbase_zh_CN.ts
examples/demo_plugin/: CMakeLists.txt  DemoPlugin.cpp  README.md
plugins/dxf_plugin/: CMakeLists.txt  README.md  YiCadDxfPlugin.def  dxf.xml.example
plugins/dxf_plugin/src/: DxfExporter.cpp  DxfExporter.h  DxfImporter.cpp  DxfImporter.h  DxfInterfaceAdapter.h  DxfMapping.cpp  DxfMapping.h  DxfPlugin.cpp
(+442 files in other folders)
